--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,8 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    # Configures your CMake project. Be sure the compile_commands.json file is created.
-    - name: Configure project
-      run: cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -S . -B build
-
-    # Builds your CMake project. (This step is optional, as it is not required for code analysis).
-    - name: Build project (optional)
+    # Builds your Make project.
+    - name: Build project 
       run: cpptesttrace make clean all
 
     # Runs code analysis with C/C++test.
