--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "cpptest.compilerIdentifier": "gcc_11-aarch64",
     "cpptest.commandLinePattern": "cpptestcli ${stopFile} ${compilerConfig} ${testConfig} ${reportDir} ${selectedFiles} -module . -trace make clean all",
-    "cpptest.testConfiguration": "${workspaceFolder}/Local scans.properties"
+    "cpptest.testConfiguration": "builtin://MISRA C 2012",
 }
